--- a/tex/notation.tex
+++ b/tex/notation.tex
@@ -25,10 +25,10 @@
     $\boldsymbol{a}_{nk}$ & buffers $n$ and $k$ prepared in same
     vessel (binary) & \ref{SS.constr6}\\
     $c_{m}$ & (relative) cost of vessel $m$ & \ref{S.vesseldata}\\
-    $f_{\mathit{MAXUSE}}$ & buffer maximum use time ratio 
+    $f_{\mathit{MAXUSE}}$ & buffer maximum use duration ratio 
         & \ref{SS.randomdata}\\
     $f_{\mathit{MINFILL}}$ & vessel minimum fill ratio & \ref{S.parameters}\\
-    $f_{\mathit{MINUSE}}$ & buffer minimum use time ratio 
+    $f_{\mathit{MINUSE}}$ & buffer minimum use duration ratio
         & \ref{SS.randomdata}\\
     $f_{\mathit{UTIL}}$ & preparation slot maximum utilisation ratio
         & \ref{S.parameters}\\
