--- a/tex/preface.tex
+++ b/tex/preface.tex
@@ -33,10 +33,12 @@ I'll dig with it.
 \hspace{2cm}--- Seamus Heaney, \emph{Digging}
 \end{quote}
 
-This thesis was motivated by \ldots
+The motivation for this thesis was a desire to have a robust and efficient
+method for optimising a problem encountered when attempting early-stage
+design of bioprocessing facilities. 
 
 % Introduction
-We begin in \hyperref[C.intro]{Chapter \ref*{C.intro}} with an overview of the
+\hyperref[C.intro]{Chapter \ref*{C.intro}} begins with an overview of the
 field of bioprocessing, followed by an outline of the design challenges that
 exist and an outline of the problem we are trying to solve; the buffer vessel
 selection problem.
@@ -49,7 +51,7 @@ programming.
 
 % Data
 \hyperref[C.data]{Chapter \ref*{C.data}} outlines the form of the input data
-available and describes the input parameters to the mathematical model
+and describes the input parameters to the mathematical model.
 
 % Methodology
 In \hyperref[C.methodology]{Chapter \ref*{C.methodology}}, several
@@ -59,16 +61,15 @@ discussed.
 % Results --- experimental, survey, etc
 \hyperref[C.results]{Chapter \ref*{C.results}} catalogues the results obtained.
 This includes outlining the form of the results, visualising the results and
-an investigation into the complexity of the problem and the time taken for
-solution as a function of the problem size.
+investigation into the time taken to obtain a solution.
 
 % Discussion
-\hyperref[C.discussion]{Chapter \ref*{C.discussion}} discusses the results in
-and the scope for further work.
+\hyperref[C.discussion]{Chapter \ref*{C.discussion}} discusses the results, 
+and the complexity of the problem.
 
 % Conclusions and future work
 \hyperref[C.conclusions]{Chapter \ref*{C.conclusions}} outlines the conclusions
-drawn from the exercise.
+drawn from the exercise and the scope for further work.
 
 \vspace{2em}
 
